--- a/index.html
+++ b/index.html
@@ -76,26 +76,25 @@
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
               <td width="68%" valign="middle">
-                <p align="center"><name>Haotong Qin (秦浩桐)</name></p>
-                <p align="justify">I am a PhD student (2019.09-) in the State Key Laboratory of Software Development Environment (SKLSDE)
-                    and Shen Yuan Honors College at <a href="https://www.buaa.edu.cn/">Beihang University</a>,
+                <p align="center"><name>Jiakai Wang (王嘉凯)</name></p>
+                <p align="justify">I am a PhD student (2018.09-) in the State Key Laboratory of Software Development Environment (SKLSDE), SCSE at <a href="https://www.buaa.edu.cn/">Beihang University</a>,
                     supervised by Prof. <a href="http://sites.nlsde.buaa.edu.cn/~liwei/">Wei Li</a>
                     and Prof. <a href="http://sites.nlsde.buaa.edu.cn/~xlliu/">Xianglong Liu</a>.
-                    I obtained my BSc degree in Computer Science and Engineering (<i>Summa Cum Laude</i>) from <a href="https://www.buaa.edu.cn/">Beihang University</a> in 2019.
+                    I obtained my BSc degree in Computer Science and Engineering (<i>Summa Cum Laude</i>) from <a href="https://www.buaa.edu.cn/">Beihang University</a> in 2018.
                     <br><br>
-                    In my PhD study, I interned at the WeiXin Group (WXG) of <a href="https://www.tencent.com/en-us">Tencent</a> (Shenzhen, China). 
+<!--                     In my PhD study, I interned at the WeiXin Group (WXG) of <a href="https://www.tencent.com/en-us">Tencent</a> (Shenzhen, China). 
                     In my undergraduate study, I interned at the Speech Group of Microsoft Research Asia (<a href="https://www.msra.cn/">MSRA</a>) (Beijing,
                     China) and the Big Data Intelligence Group on SmartCity (<a href="https://www.bigscity.com/">BIGSCity</a>) of Beihang University (Beijing, China).
-                    <br><br>
-                    <strong>Email:</strong> qinhaotong@nlsde.buaa.edu.cn / qinhaotong@buaa.edu.cn
+                    <br><br> -->
+                    <strong>Email:</strong> jk_buss_scse@buaa.edu.cn
                 <br>
 
                 </p><p align="center">
-                    <a href="https://htqin.github.io/CV/cv_htqin.pdf">CV</a> /
-                    <a href="https://github.com/htqin"> Github </a> / 
-                    <a href="https://www.linkedin.com/in/haotongqin/">Linkedin</a> / 
-                    <a href="https://scholar.google.com/citations?user=mK6n-KgAAAAJ&hl=zh-CN">Google Scholar</a> / 
-                    <a href="https://www.zhihu.com/column/c_1343181023409074176">知乎专栏</a>
+                    <a href="https://htqin.github.io/CV/cv_jkwang.pdf">CV</a> /
+                    <a href="https://github.com/buaa0110"> Github </a> / 
+<!--                     <a href="https://www.linkedin.com/in/haotongqin/">Linkedin</a> /  -->
+<!--                     <a href="https://scholar.google.com/citations?user=mK6n-KgAAAAJ&hl=zh-CN">Google Scholar</a> /  -->
+<!--                     <a href="https://www.zhihu.com/column/c_1343181023409074176">知乎专栏</a> -->
                 </p>
               </td>
 			  <td align="right"> <img class="hp-photo" src="./Imgs/photo.jpg" style="width: 240;"></td></tr>
