--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     }
     </style>
 
-    <title>Haotong Qin (秦浩桐)</title>
+    <title>Jiakai Wang (王嘉凯)</title>
     <!--<link rel="stylesheet" type="text/css" href="/imgs/css" >-->
     <link rel="icon" type="image/jpg" href="https://htqin.github.io/Imgs/buaa_icon.jpg">
 </head>
