--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <title>Jiakai Wang (王嘉凯)</title>
     <!--<link rel="stylesheet" type="text/css" href="/imgs/css" >-->
-    <link rel="icon" type="image/jpg" href="https://htqin.github.io/Imgs/buaa_icon.jpg">
+    <link rel="icon" type="image/jpg" href="https://htqin.github.io/buaa_icon.jpg">
 </head>
 
 <body>
@@ -97,7 +97,7 @@
 <!--                     <a href="https://www.zhihu.com/column/c_1343181023409074176">知乎专栏</a> -->
                 </p>
               </td>
-			  <td align="right"> <img class="hp-photo" src="./Imgs/photo.jpg" style="width: 240;"></td></tr>
+			  <td align="right"> <img class="hp-photo" src="./photo.jpg" style="width: 240;"></td></tr>
             </tbody>
           </table>
 
@@ -155,7 +155,7 @@
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 		<tbody>
 
-        <tr><td width="20%"><img src="./Imgs/bipointnet.png" alt="PontTuset" width="180" style="border-style: none"></td>
+        <tr><td width="20%"><img src="./dualattention.png" alt="PontTuset" width="180" style="border-style: none"></td>
             <td width="80%" valign="top">
 	            <p><a href="https://arxiv.org/pdf/2103.01050.pdf">
                     <papertitle>Dual Attention Suppression Attack: Generate Adversarial Camouflage in Physical World</papertitle></a>
@@ -174,7 +174,7 @@
             </td>
         </tr>
 
-        <tr><td width="20%"><img src="./Imgs/dsg.png" alt="PontTuset" width="180" style="border-style: none"></td>
+        <tr><td width="20%"><img src="./bias.png" alt="PontTuset" width="180" style="border-style: none"></td>
             <td width="80%" valign="top">
 	            <p><a href="https://arxiv.org/pdf/2005.09257.pdf">
                     <papertitle>Bias-based Universal Adversarial Patch Attack for Automatic Check-out</papertitle></a>
@@ -192,6 +192,7 @@
             </td>
         </tr>
         <tr>    
+	<td width="20%"><img src="./Eval1.png" alt="AIView" width="180" height = "110" style="border-style: none"></td>
             <td width="80%" valign="top">
                 <p><a href="http://www.cesi.ac.cn/202007/6566.html">
                 <papertitle>人工智能安全与评测</papertitle></a>
@@ -205,7 +206,7 @@
            </td>
         </tr>
         <tr>
-           <td width="20%"><img src="./imgs/Eval_1.png" alt="AIView" width="180" height = "110" style="border-style: none"></td>
+           <td width="20%"><img src="./Eval2.png" alt="AIView" width="180" height = "110" style="border-style: none"></td>
            <td width="80%" valign="top">
                 <p><a href="http://www.cesi.ac.cn/202007/6566.html">
                 <papertitle>人工智能机器学习模型及系统的质量要素和测试方法</papertitle></a>
