--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </td>
         </tr>
         <tr>    
-	<td width="20%"><img src="./Eval2.png" alt="AIView" width="180" height = "110" style="border-style: none"></td>
+	<td width="20%"><img src="./Eval2.jpg" alt="AIView" width="180" height = "110" style="border-style: none"></td>
             <td width="80%" valign="top">
                 <p><a href="http://www.cesi.ac.cn/202007/6566.html">
                 <papertitle>人工智能安全与评测</papertitle></a>
@@ -206,7 +206,7 @@
            </td>
         </tr>
         <tr>
-           <td width="20%"><img src="./Eval1.png" alt="AIView" width="180" height = "110" style="border-style: none"></td>
+           <td width="20%"><img src="./Eval1.jpg" alt="AIView" width="180" height = "110" style="border-style: none"></td>
            <td width="80%" valign="top">
                 <p><a href="http://www.cesi.ac.cn/202007/6566.html">
                 <papertitle>人工智能机器学习模型及系统的质量要素和测试方法</papertitle></a>
