--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <td width="80%" valign="top">
 	            <p><a href="https://arxiv.org/pdf/2103.01050.pdf">
                     <papertitle>Dual Attention Suppression Attack: Generate Adversarial Camouflage in Physical World</papertitle></a>
-                    <br>Jiakai Wang, <strong>Aishan Liu</strong>, Zixin Yin, Shunchang Liu, Shiyu Tang, Xianglong Liu.<br>
+                    <br><strong>Jiakai Wang</strong>, Aishan Liu, Zixin Yin, Shunchang Liu, Shiyu Tang, Xianglong Liu.<br>
                     <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2021
                     <font color="red"><strong>(Oral)</strong></font>
                     <br>
@@ -178,7 +178,7 @@
             <td width="80%" valign="top">
 	            <p><a href="https://arxiv.org/pdf/2005.09257.pdf">
                     <papertitle>Bias-based Universal Adversarial Patch Attack for Automatic Check-out</papertitle></a>
-                    <br><strong>Aishan Liu</strong>, Jiakai Wang, Xianglong Liu, Bowen Cao, Chongzhi Zhang, Hang Yu.<br>
+                    <br>Aishan Liu*, <strong>Jiakai Wang*</strong>, Xianglong Liu, Bowen Cao, Chongzhi Zhang, Hang Yu.<br>
                     <em>European Conference on Computer Vision (ECCV)</em>, 2020
                     <br>
                     <a href="https://arxiv.org/pdf/2005.09257.pdf">pdf</a> /
@@ -196,7 +196,7 @@
             <td width="80%" valign="top">
                 <p><a href="http://www.cesi.ac.cn/202007/6566.html">
                 <papertitle>人工智能安全与评测</papertitle></a>
-                <br> <strong>刘艾杉</strong>, 王嘉凯, 刘祥龙<br>
+                <br> 刘艾杉, <strong>王嘉凯</strong>, 刘祥龙<br>
                 <em>人工智能(AI-View)</em>, 2020
                 
                 <br>
@@ -210,7 +210,7 @@
            <td width="80%" valign="top">
                 <p><a href="http://www.cesi.ac.cn/202007/6566.html">
                 <papertitle>人工智能机器学习模型及系统的质量要素和测试方法</papertitle></a>
-                <br> 王嘉凯, <strong>刘艾杉</strong>, 刘祥龙<br>
+                <br> <strong>王嘉凯</strong>, 刘艾杉, 刘祥龙<br>
                 <em>信息技术与标准化</em>, 2020
                 
                 <br>
@@ -233,7 +233,7 @@
     </table>
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
 		<tbody><tr>
-        <td width="20%"><img src="./chongming.jpg" alt="PontTuset" width="180" height="160" style="border-style: none"></td>
+        <td width="20%"><img src="./Chongming.jpg" alt="PontTuset" width="180" height="160" style="border-style: none"></td>
             <td width="80%" valign="top">
                  <p><a href="https://arxiv.org/pdf/2101.09617.pdf">
                  <papertitle>重明 (AISafety)</papertitle></a>
