--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
        <tbody><tr>
           <td><heading>News</heading> 
+	    <p> <strong>[2021.05.05]</strong> I am selected in Doctoral Consortium <a href="https://ijcai-21.org/program-dc/">IJCAI 2021</a> (<font color="red">7 people from Mainland China</font>).</p>
             <p style="font-size:13px"> <strong>[2021.03]</strong>  One paper accepted by CVPR 2021 (Oral).</p>
             <p style="font-size:13px"> <strong>[2020.12]</strong>  Our open-source platform 重明 has been awarded the <a href="http://www.techweb.com.cn/2020-12-02/2814466.shtml">首届OpenI启智社区优秀开源项目</a> (First OpenI Excellent Open Source Project).</p>
             </td>
@@ -263,11 +264,12 @@
      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
            <td><heading>Main Awards</heading>
+	    <p> <strong>[2021.06]</strong> &nbsp;&nbsp; Beihang university Excellent Academic Paper Award.</p>
             <p> <strong>[2020.09]</strong> &nbsp;&nbsp; China National Scholarship (<strong>Top2%</strong>).</p>
-            <p> <strong>[2020.09]</strong> &nbsp;&nbsp; Beihang University Merit Student (<strong></strong>).</p>
-            <p> <strong>[2019.10]</strong> &nbsp;&nbsp; Beihang University First Prize Scholarship (<strong></strong>).</p>
+            <p> <strong>[2020.09]</strong> &nbsp;&nbsp; Beihang University Merit Student.</p>
+            <p> <strong>[2019.10]</strong> &nbsp;&nbsp; Beihang University First Prize Scholarship.</p>
             <p> <strong>[2018.09]</strong> &nbsp;&nbsp; Beihang University Outstanding Freshman Scholarship (<strong>1/12</strong>).</p>
-            <p> <strong>[2018.06]</strong> &nbsp;&nbsp; Outstanding Graduates of Beijing Province (<strong></strong>).</p>
+            <p> <strong>[2018.06]</strong> &nbsp;&nbsp; Outstanding Graduates of Beijing Province.</p>
            </td>
            </tr></tbody>
    </table>
