--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         <tbody><tr>
            <td><heading>Main Awards</heading>
 	    <p> <strong>[2021.06]</strong> &nbsp;&nbsp; Beihang university Excellent Academic Paper Award.</p>
+	    <p> <strong>[2020.10]</strong> &nbsp;&nbsp; Beihang University First Prize Scholarship.</p>
             <p> <strong>[2020.09]</strong> &nbsp;&nbsp; China National Scholarship (<strong>Top2%</strong>).</p>
             <p> <strong>[2020.09]</strong> &nbsp;&nbsp; Beihang University Merit Student.</p>
             <p> <strong>[2019.10]</strong> &nbsp;&nbsp; Beihang University First Prize Scholarship.</p>
