--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <a href="https://htqin.github.io/CV/cv_jkwang.pdf">CV</a> /
                     <a href="https://github.com/buaa0110"> Github </a> / 
 <!--                     <a href="https://www.linkedin.com/in/haotongqin/">Linkedin</a> /  -->
-<!--                     <a href="https://scholar.google.com/citations?user=mK6n-KgAAAAJ&hl=zh-CN">Google Scholar</a> /  -->
+                    <a href="https://scholar.google.com/citations?user=RoFr1qcAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
 <!--                     <a href="https://www.zhihu.com/column/c_1343181023409074176">知乎专栏</a> -->
                 </p>
               </td>
@@ -107,7 +107,7 @@
           <td>
           <heading>Research</heading>
             <p align="justify">
-                In my PhD study, I mainly devote myself to adversarial examples research and gradually transfer to explore a related research point, to wit, physical adversarial examples. I hold the review that physical adversarial examples can powerfully promote the development of secure and robust artificial intelligence. Our previous works such as bias-based universal adversarial patch attack and dual attention suppression attack have achieved some results and draw some interesting conclusions. 
+		    In my PhD study, I devote myself to <strong>Trustworthy AI</strong> research and mainly focus on the physical adversarial examples generation, now I try to transfer to investigate the adversarial defense related work in the physical world. I hold the review that physical adversarial attacks and defenses can powerfully promote the development of secure and robust artificial intelligence, leading a healthier future society. Our previous works such as bias-based universal adversarial patch attack and dual attention suppression attack have achieved some results and draw some interesting conclusions. 
             </p>
             Now my research focus is mainly on:
                 <ul>
