--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <td>
           <heading>Research</heading>
             <p align="justify">
-		    In my PhD study, I devote myself to <strong>Trustworthy AI</strong> research and mainly focus on the physical adversarial examples generation, now I try to transfer to investigate the adversarial defense related work in the physical world. I hold the review that physical adversarial attacks and defenses can powerfully promote the development of secure and robust artificial intelligence, leading a healthier future society. Our previous works such as bias-based universal adversarial patch attack and dual attention suppression attack have achieved some results and draw some interesting conclusions. 
+		    In my Ph.D. study, I devote myself to <strong>Trustworthy AI</strong> research and mainly focus on the physical adversarial examples generation, now I try to transfer to investigate the adversarial defense works in the physical world. I hold the review that physical adversarial attacks and defenses can powerfully promote the development of secure and robust artificial intelligence, leading to a healthier future society. Our previous works such as bias-based universal adversarial patch attack and dual attention suppression attack have achieved some results and draw some interesting conclusions. 
             </p>
             Now my research focus is mainly on:
                 <ul>
@@ -137,7 +137,7 @@
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
        <tbody><tr>
           <td><heading>News</heading> 
-	    <p> <strong>[2021.05.05]</strong> I am selected in Doctoral Consortium <a href="https://ijcai-21.org/program-dc/">IJCAI 2021</a> (<font color="red">7 people from Mainland China</font>).</p>
+	    <p> <strong>[2021.05]</strong> I am selected in Doctoral Consortium <a href="https://ijcai-21.org/program-dc/">IJCAI 2021</a> (<font color="red">7 people from Mainland China</font>).</p>
             <p style="font-size:13px"> <strong>[2021.03]</strong>  One paper accepted by CVPR 2021 (Oral).</p>
             <p style="font-size:13px"> <strong>[2020.12]</strong>  Our open-source platform 重明 has been awarded the <a href="http://www.techweb.com.cn/2020-12-02/2814466.shtml">首届OpenI启智社区优秀开源项目</a> (First OpenI Excellent Open Source Project).</p>
             </td>
