--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
            <td><heading>Main Awards</heading>
-	    <p> <strong>[2021.06]</strong> &nbsp;&nbsp; Beihang university Excellent Academic Paper Award.</p>
+	    <p> <strong>[2021.06]</strong> &nbsp;&nbsp; Beihang University Excellent Academic Paper Award.</p>
 	    <p> <strong>[2020.10]</strong> &nbsp;&nbsp; Beihang University First Prize Scholarship.</p>
             <p> <strong>[2020.09]</strong> &nbsp;&nbsp; China National Scholarship (<strong>Top2%</strong>).</p>
             <p> <strong>[2020.09]</strong> &nbsp;&nbsp; Beihang University Merit Student.</p>
