--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </p><p align="center">
                     <a href="https://htqin.github.io/CV/cv_jkwang.pdf">CV</a> /
                     <a href="https://github.com/buaa0110"> Github </a> / 
-<!--                     <a href="https://www.linkedin.com/in/haotongqin/">Linkedin</a> /  -->
+                    <a href="https://www.linkedin.com/in/N2S/">Linkedin</a> / 
                     <a href="https://scholar.google.com/citations?user=RoFr1qcAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
 <!--                     <a href="https://www.zhihu.com/column/c_1343181023409074176">知乎专栏</a> -->
                 </p>
