--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <br>
 
                 </p><p align="center">
-                    <a href="https://htqin.github.io/CV/cv_jkwang.pdf">CV</a> /
+                    <a href="https://buaa0110.github.io/cv_jkwang.pdf">CV</a> /
                     <a href="https://github.com/buaa0110"> Github </a> / 
                     <a href="https://www.linkedin.com/in/N2S/">Linkedin</a> / 
                     <a href="https://scholar.google.com/citations?user=RoFr1qcAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
