--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
        <tbody><tr>
           <td><heading>News</heading> 
+		  <p> <strong>[2021.08.12]</strong> One paper <a href=" ">paper</a> for deepfake detection is accepted by <a href="https://advm-workshop-2021.github.io/">ACM MM 2021 workshop: Adversarial Learning for Multimedia</a>.
+	<p> <strong>[2021.07.23]</strong> One co-authored <a href=" ">paper</a> for object detection is accepted by <a href="http://iccv2021.thecvf.com/">ICCV 2021</a>.
 	    <p> <strong>[2021.05]</strong> I am selected in Doctoral Consortium <a href="https://ijcai-21.org/program-dc/">IJCAI 2021</a> (<font color="red">7 people from Mainland China</font>).</p>
             <p style="font-size:13px"> <strong>[2021.03]</strong>  One paper accepted by CVPR 2021 (Oral).</p>
             <p style="font-size:13px"> <strong>[2020.12]</strong>  Our open-source platform 重明 has been awarded the <a href="http://www.techweb.com.cn/2020-12-02/2814466.shtml">首届OpenI启智社区优秀开源项目</a> (First OpenI Excellent Open Source Project).</p>
