--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
        <tbody><tr>
           <td><heading>News</heading> 
-		  <p> <strong>[2021.08.12]</strong> One paper <a href=" ">paper</a> for deepfake detection is accepted by <a href="https://advm-workshop-2021.github.io/">ACM MM 2021 workshop: Adversarial Learning for Multimedia</a>.
+		  <p> <strong>[2021.08.12]</strong> One <a href=" ">paper</a> for deepfake detection is accepted by <a href="https://advm-workshop-2021.github.io/">ACM MM 2021 workshop: Adversarial Learning for Multimedia</a>.
 	<p> <strong>[2021.07.23]</strong> One co-authored <a href=" ">paper</a> for object detection is accepted by <a href="http://iccv2021.thecvf.com/">ICCV 2021</a>.
 	    <p> <strong>[2021.05]</strong> I am selected in Doctoral Consortium <a href="https://ijcai-21.org/program-dc/">IJCAI 2021</a> (<font color="red">7 people from Mainland China</font>).</p>
             <p style="font-size:13px"> <strong>[2021.03]</strong>  One paper accepted by CVPR 2021 (Oral).</p>
