--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
 
     <!--SECTION 9 -->
     <!--SECTION 9 -->
-    <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr>
     <td width="100%" align="middle">
     <p align="center" style="width: 25% ">
-        <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=O7AjyGXmrOPjngfk_VI9NhWFu7JWskLJlRerwKQdjh4"></script>
+        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=F8qBcfOz5fEukF2GbSvTknfvOhlRh0N-pdOTCXWEHtk"></script>
     </p></td>
     </tr>
     </tbody>
-    </table> -->
+    </table>
