--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <title>Jiakai Wang (王嘉凯)</title>
     <!--<link rel="stylesheet" type="text/css" href="/imgs/css" >-->
-    <link rel="icon" type="image/jpg" href="https://htqin.github.io/buaa_icon.jpg">
+<!--     <link rel="icon" type="image/jpg" href="https://htqin.github.io/buaa_icon.jpg"> -->
 </head>
 
 <body>
